# MicroMobility_Golfcart_Combined

./: .gitignore  .zshrc  1_micromobility_car_start_containers.sh  2_micromobility_car_stop_containers.sh  3_micromobility_car_start_containers_with_dashboard.sh  4_start_server  5_start_environment  6_start_environment_without_object_avoidance  README.md  cart-settings.txt
dashboard/: heading.html  index.html  mapkick.js  style.css
micromobility_bridgecontainer/: 01_kill_bridge.sh  Jenkinsfile  README.md  docker-compose.yml
micromobility_bridgecontainer/Docker/mm_interfaces/: CMakeLists.txt
micromobility_bridgecontainer/Docker/mm_interfaces/msg/: CameraImage.msg
micromobility_car_navigation/: .gitignore  01_build_image.sh  Dockerfile  README.md  docker-compose.yml
micromobility_car_navigation/local/Project/dev_ws/src/install/mm_interfaces/share/mm_interfaces/: package.ps1  package.sh  package.xml  package.zsh
micromobility_car_navigation/local/Project/dev_ws/src/install/mm_interfaces/share/mm_interfaces/cmake/: mm_interfaces__rosidl_typesupport_cExport.cmake  mm_interfaces__rosidl_typesupport_introspection_cExport.cmake  mm_interfaces__rosidl_typesupport_introspection_cppExport.cmake
micromobility_car_navigation/local/Project/dev_ws/src/install/mm_interfaces/share/mm_interfaces/msg/: CoordinateMsg.msg  Int.msg
micromobility_car_navigation/local/Project/dev_ws/src/install/mm_interfaces/share/mm_interfaces/srv/: Pathfinding.idl  Pathfinding.srv  Pathfinding_Request.msg  Proximity_Response.msg
micromobility_car_object_avoidance/: 00_remove_image  01_build_image.sh  02_start_object_avoidance_container  03_attach_bash  Dockerfile  README.md  docker-compose.yml
(+302 files in other folders)
